--- a/css88.css
+++ b/css88.css
@@ -3,7 +3,7 @@ body {
     line-height: normal;
     padding: 0;
     scroll-behavior: smooth !important;
-    height: 100vh !important;
+    max-height: 100vh !important;
     overflow: hidden;
   }
   html{
