--- a/css88.css
+++ b/css88.css
@@ -72,7 +72,7 @@ body {
     /* Paddings */
     --padding-21xl: 40px;
     --padding-41xl: 60px;
-    --padding-81xl: 100px;
+    --padding-81xl: 80px;
     --padding-9xs: 4px;
     --padding-xs: 12px;
     --padding-13xl: 32px;
@@ -1980,5 +1980,45 @@ body {
   .small-number-card-mob {
     width: 50%;
     height:100px;
+  }
+}
+@media (min-width:1500px) {
+  .visa-card-card{
+    height: 795px !important;
+  }
+  .platform-card{
+    height: 795px !important;
+  }
+}
+@media (min-width:1500px) {
+  .visa-card-card{
+    height: 900px !important;
+  }
+  .platform-card{
+    height: 900px !important;
+  }
+}
+@media (min-width:1118px) and (max-width:1500px){
+  .visa-card-card{
+    height: 795px !important;
+  }
+  .platform-card{
+    height: 795px !important;
+  }
+}
+@media (min-width:946px) and (max-width:1118px){
+  .visa-card-card{
+    height: 850px !important;
+  }
+  .platform-card{
+    height: 850px !important;
+  }
+}
+@media (min-width:800px) and (max-width:946px){
+  .visa-card-card{
+    height: 950px !important;
+  }
+  .platform-card{
+    height: 950px !important;
   }
 }
