--- a/css88.css
+++ b/css88.css
@@ -1734,7 +1734,7 @@ body {
   .hero-section-mob-parent {
     width: 100%;
     height: calc(100vh - 70px) !important;
-    position: absolute;
+    position: fixed;
     top: 70px;
     overflow-y: scroll;
     overflow-x: hidden;
