--- a/css88.css
+++ b/css88.css
@@ -1734,8 +1734,8 @@ body {
   .hero-section-mob-parent {
     width: 100%;
     height: calc(100vh - 70px) !important;
-    position: fixed;
-    top: 70px;
+    position: fixed !important;
+    top: 70px !important;
     overflow-y: scroll;
     overflow-x: hidden;
   }
