--- a/css88.css
+++ b/css88.css
@@ -1026,6 +1026,7 @@ body {
     z-index: 1;
   }
   .btcle-details-mob,
+  .btcle-details-mob2,
   .btcle-details-mob3,
   .smart-contract-0x9d2144328e1d-parent {
     display: flex;
@@ -1038,7 +1039,10 @@ body {
     gap: var(--gap-xs);
   }
   .btcle-details-mob {
-    width: 65%;
+    width: 62%;
+  }
+  .btcle-details-mob2 {
+    width: 47%;
   }
   .btcle-details-mob3 {
     width: 50%;
@@ -1151,7 +1155,7 @@ body {
     gap: var(--gap-9xs);
   }
   .who-are-we-pic-mob {
-    width: 50%;
+    width: 53%;
     flex-direction: row;
   }
   .who-are-we18 {
@@ -1188,7 +1192,7 @@ body {
     align-items: center;
     justify-content: flex-start;
     padding: var(--padding-xs) var(--padding-5xl);
-    gap: var(--gap-xs);
+    gap: 6px; 
   }
   .ipo-policy3 {
     width: 100%;
@@ -1233,7 +1237,7 @@ body {
     font-size: var(--font-size-5xs);
   }
   .ipo-policy-pic-mob {
-    width: 35% ;
+    width: 38% ;
     aspect-ratio: 1 / 1;
     position: relative;
     border-radius: var(--br-5xs);
